kernel.log
make[1]: Entering directory '/home/user/cepheus-p-oss/out'
  CHK     include/config/kernel.release
  GEN     ./Makefile
  CHK     include/generated/uapi/linux/version.h
  CHK     scripts/mod/devicetable-offsets.h
  Using .. as source for kernel
  CHK     include/generated/utsrelease.h
  CHK     include/generated/timeconst.h
  CHK     include/generated/bounds.h
  CHK     include/generated/asm-offsets.h
  CALL    ../scripts/checksyscalls.sh
  CHK     include/generated/compile.h
  CC      kernel/sched/fair.o
  CC      sound/sound_core.o
  CC      net/socket.o
  CC      sound/core/sound.o
  CC      sound/core/init.o
  CC      sound/core/memory.o
  CC      drivers/gpu/drm/msm/dp/dp_panel.o
  CC      sound/core/control.o
In file included from ../drivers/gpu/drm/msm/dp/dp_panel.c:17:
In file included from ../drivers/gpu/drm/msm/dp/dp_panel.h:24:
In file included from ../drivers/gpu/drm/msm/sde/sde_connector.h:23:
In file included from ../drivers/gpu/drm/msm/sde/sde_kms.h:31:
../drivers/gpu/drm/msm/sde/sde_hw_catalog.h:1232:15: error: type specifier missing, defaults to 'int' [-Werror,-Wimplicit-int]
static inline sde_hw_intf_te_supported(const struct sde_mdss_cfg *sde_cfg)
~~~~~~~~~~~~~ ^
1 error generated.
../scripts/Makefile.build:363: recipe for target 'drivers/gpu/drm/msm/dp/dp_panel.o' failed
make[5]: *** [drivers/gpu/drm/msm/dp/dp_panel.o] Error 1
../scripts/Makefile.build:678: recipe for target 'drivers/gpu/drm/msm' failed
make[4]: *** [drivers/gpu/drm/msm] Error 2
../scripts/Makefile.build:678: recipe for target 'drivers/gpu/drm' failed
make[3]: *** [drivers/gpu/drm] Error 2
../scripts/Makefile.build:678: recipe for target 'drivers/gpu' failed
make[2]: *** [drivers/gpu] Error 2
/home/user/cepheus-p-oss/Makefile:1131: recipe for target 'drivers' failed
make[1]: *** [drivers] Error 2
make[1]: *** Waiting for unfinished jobs....
  CC      sound/core/misc.o
  CC      net/802/p8022.o
